# Tarea-II-Datos-II

./: .gitignore  CMakeLists.txt  README.md
src/cr.ac.itcr.DesignPatterns/: Adapter.cpp  Client.cpp
src/cr.ac.itcr.DesignPatterns/Adapter/: CAdapter.cpp  CAdapter.h  Circulo.h  StandardCircle.h
src/cr.ac.itcr.DesignPatterns/Prototype/: Client.h  ConcretePrototypeA.h  ConcretePrototypeB.h  Prototype.h
