cmake_minimum_required(VERSION 3.17)
project(Tarea_II_Datos_II)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tarea_II_Datos_II src/cr.ac.itcr.DesignPatterns/Adapter/Circulo.h src/cr.ac.itcr.DesignPatterns/Adapter/StandardCircle.h src/cr.ac.itcr.DesignPatterns/Adapter/CAdapter.cpp src/cr.ac.itcr.DesignPatterns/Adapter/CAdapter.h src/cr.ac.itcr.DesignPatterns/Prototype/Prototype.h src/cr.ac.itcr.DesignPatterns/Prototype/ConcretePrototypeA.h src/cr.ac.itcr.DesignPatterns/Prototype/ConcretePrototypeB.h src/cr.ac.itcr.DesignPatterns/Client.cpp src/cr.ac.itcr.DesignPatterns/Prototype/Client.h)
